hopefully final update

--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,16 @@
 
 <body>
     
+    <!-- Navigation bar -->
     <nav>
         <div class="container" id="navcontainer">
+            <!-- logo author:Sinead Breagy, Canva -->
             <div class="logo logoimg">
                 <a href="index.html"><img src="Images/scoot-easy logo white 2.png" class="object-fit-scale" alt="Logo"></a>
             </div>
-
+            
             <div class="nav-links">
+                <a href="index.html">HOME</a>
                 <a href="about.html">ABOUT</a>
                 <a href="rent.html">RENT</a>
                 <a href="location.html">LOCATION</a>
